--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script> <!-- ✨✨✨ 最终的、正确的路径修正 ✨✨✨ -->
   </body>
 </html>
