--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,18 @@
 <!doctype html>
-<html lang="zh-Hant"> <!-- 將語言設定為繁體中文 -->
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/MOZTECH-002.png" /> <!-- 將圖示也換成您的 LOGO -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MOZTECH 倉儲作業系統</title>
-
-    <!-- 【關鍵修改】從 Google Fonts 引入 Noto Sans TC 字體 -->
+    <title>MOZTECH WMS</title>
+    
+    <!-- 【新增】Google Fonts 引入 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.jsx"></script> <!-- ✨✨✨ 最终的、正确的路径修正 ✨✨✨ -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
